--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,15 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Output files
+build/*
+
+# IntelliJ files
+.idea/*
+
+# Generated gradle files
+.gradle/*
+
 # Package Files #
 *.jar
 *.war
